# RoadToTheCentre

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  RoadToTheCentre.sln  RoadToTheCentre.vcxproj  RoadToTheCentre.vcxproj.filters
inc/Action/: Action.hpp  ActionValidator.hpp  ExecutingEntities.hpp  GeneralAction.hpp  GeneralActionContext.hpp
inc/Core/: Game.h  Game.hpp
inc/Entities/: Player.h  Player.hpp
inc/GameMap/: AdjacencyType.hpp  Galaxy.h  Galaxy.hpp  Planet.h  Planet.hpp  SolarSystem.h  SolarSystem.hpp
inc/Mechanics/: ActionValidator.h  TravelAgent.h  TravelAgent.hpp
inc/Services/: GameTimeService.h  GameTimeService.hpp  ITimeObserver.hpp
inc/TimeServices/: GameTimeService.h
inc/UI/: ActionContext.h  TextInterface.h  TextInterface.hpp
inc/Utility/: EnumSerializer.h  EnumSerializer.hpp  RandomGenerator.hpp
src/: CMakeLists.txt
src/Action/: ActionValidator.cpp  CMakeLists.txt  GeneralAction.cpp
src/Core/: CMakeLists.txt  Game.cpp
src/Entities/: CMakeLists.txt  Player.cpp
src/GameMap/: CMakeLists.txt  Galaxy.cpp  Planet.cpp  SolarSystem.cpp
src/Mechanics/: ActionValidator.cpp  CMakeLists.txt  TravelAgent.cpp
src/Services/: CMakeLists.txt  GameTimeService.cpp
src/TimeServices/: GameTimeService.cpp
src/UI/: CMakeLists.txt  TextInterface.cpp
src/Utility/: CMakeLists.txt  EnumSerializer.cpp  RandomGenerator.cpp
